# crawlerNew

./: .gitmodules  CMakeLists.txt  DataBase.cpp  DataBase.h  HashTable.cpp  HashTable.h  Parser.cpp  Parser.h  README.md  craweler development.docx  crawler  crawler.cpp  crawler.h  ettoday.rec  install.sh  main.cpp  makefile  master.cpp  master.h  test  title
cpp/: DataBase.cpp  Parser.cpp  Parser.h  a.out  crawler.cpp  crawler.h  main.cpp  makefile  tree.cpp
crawler.dSYM/Contents/Resources/DWARF/: crawler
maintex_extraction/: .test.cpp.swp  a.out  gumbo.cpp  tidy.cpp  tree.cpp  tree.h
maintex_extraction/a.out.dSYM/Contents/Resources/DWARF/: a.out
maintex_extraction/output/: 0.htm  0.xhtml  gold.txt  tagCount.txt
python/: maintex.pyx  setup.py  test.cpp
src_not_used/: HashTable.cpp  HashTable.h
